--- a/views/admin/dashboard.hbs
+++ b/views/admin/dashboard.hbs
@@ -1,4 +1,198 @@
+<!-- Sale & Revenue Start -->
+<section class="p-3">
 
+<div class="container-fluid pt-4 px-4">
+  <div class="row g-4 dashCards">
+    <div class="col-sm-6 col-xl-3">
+      <div
+        class="bg-light rounded d-flex align-items-center justify-content-between p-4"
+      >
+        <i class="fa fa-chart-line fa-3x text-primary"></i>
+        <div class="ms-3">
+          <p class="mb-2">Total Sales</p>
+          <h6 class="mb-0">₹{{total}}</h6>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Sale & Revenue End -->
 
-    <h1>hi</h1>
+<!-- Sales Chart Start -->
+<div class="container-fluid pt-4 px-4">
+  <div
+    class="row g-4"
+    style="
+    width: 110rem;
+"
+  >
+    <div class="col-sm-12 col-xl-6">
+      <div class="bg-light text-center rounded p-4">
+        <div class="d-flex align-items-center justify-content-between mb-4">
+          <h6 class="mb-0">Sales</h6>
+
+        </div>
+        <canvas id="line-chart"></canvas>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Sales Chart End -->
+
+<!-- Recent Sales Start -->
+<div class="container-fluid pt-4 px-4">
+  <div
+    class="bg-light rounded p-4"
+    style="
+    width: 29rem;
+"
+  >
+    <div class="d-flex align-items-center justify-content-between mb-4">
+      <h6 class="mb-0">New users</h6>
+
+    </div>
+    <div class="table-responsive">
+      <table id="userTable" class="table mt-5 pl-3">
+        <thead>
+          <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Email</th>
+
+          </tr>
+        </thead>
+        <tbody>
+          {{#each users}}
+            <tr>
+              <th scope="row">{{this.name}}</th>
+              <td>{{this.email}}</td>
+            </tr>
+          {{/each}}
+        </tbody>
+      </table>
+    </div>
+    <div class="table-responsive"  style="
+    position: absolute;
+    width: 29rem;
+       top: 50.6rem;
+    left: 52rem;
+    overflow-x: hidden;
+    height: 25rem;
+    border-radius: 6px;
+    background-color: white;
+        padding: 1rem;
+">   <div class="d-flex align-items-center justify-content-between mb-4" style="background: white;">
+      <h6 class="mb-0 pt-3">Latest transactions</h6>
+
+    </div>
+       <table class="table table-bordered" id="salesTable">
+                <thead>
+                    <tr>
+                    <th>Date</th>
+                    
+                    <th>amount</th>
+                    <th>Options</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {{#each orders}}
+                    <tr>
+                        <td>{{this.deliveryDetails.Date}}</td>
+                        
+                        <td>
+                         {{this.totalAmount}}
  
+                        </td>
+                        <td>
+                            <p>
+  <button class="betaButton" data-toggle="collapse" data-target="#1{{this._id}}" type="button" onclick="userDetails('{{this.userId}}','{{this._id}}')" aria-expanded="false" aria-controls="multiCollapseExample1" style="
+    width: 8rem;
+"> User details</button>
+ 
+
+
+  
+</p>
+<div class="row">
+  <div class="col">
+    <div class="collapse multi-collapse" id="1{{this._id}}">
+      <div class="card card-body">
+        <h6>Name:</h6><span id="name{{this._id}}"></span><br>
+        <h6>Email:</h6><span id="email{{this._id}}"></span>
+        
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="collapse multi-collapse" id="2{{this._id}}">
+      <div class="card card-body">
+        
+
+      </div>
+    </div>
+  </div>
+</div>
+                        </td>
+                    </tr>
+                    {{/each}}
+                </tbody>
+            </table>
+    </div>
+  </div>
+</div>
+</section>
+<!-- Recent Sales End -->
+
+<!-- Widgets Start -->
+
+<script src="/javascripts/chart/chart.min.js"></script>
+<script>
+
+ $(window).on('load',function() {
+   let money = []
+    let date = []
+  
+  $.ajax({
+        url:'/admin/get-order-details',
+        method:'get',
+        success:(response)=>{
+
+            
+        
+          response.forEach(data => {
+        date.push(data.deliveryDetails.Date)
+        money.push(data.totalAmount)
+        });
+       
+         
+        }
+
+    
+  });
+
+  setTimeout(()=>{
+ console.log(money)
+ console.log(date)
+ var ctx3 = $("#line-chart").get(0).getContext("2d");
+     var myChart3 = new Chart(ctx3, {
+         type: "line",
+         data: {
+             labels: date,
+             datasets: [{
+                 label: "Sales",
+                 fill: false,
+                 backgroundColor: "rgba(0, 156, 255, .3)",
+                 data: money
+             }]
+         },
+         options: {
+             responsive: true
+         }
+     });
+  },300)
+     
+   
+    })
+
+
+</script>
+<!-- Widgets End -->
