--- a/views/admin/users.hbs
+++ b/views/admin/users.hbs
@@ -16,13 +16,10 @@
           <th scope="row">{{this.name}}</th>
           <td>{{this.email}}</td>
 
-          <td>
+          <td style="
+    height: 2.5rem;
+">
 
-            <a href="/admin/edit-user?id={{this._id}}"><img
-                src="/images/EditButton.svg"
-                alt=""
-                class="editBtn"
-              /></a>
 
             
             {{#if this.blocked}}
