--- a/views/partials/admin-sidebar.hbs
+++ b/views/partials/admin-sidebar.hbs
@@ -29,8 +29,8 @@
                     </div> --}}
                     <a href="/admin/all-users" class="nav-item nav-link"><i class="fa fa-users me-2"></i>Users</a>
                     <a href="/admin/products" class="nav-item nav-link"><i class="fa fa-cart-arrow-down me-2"></i>Products</a>
-                    <a href="table.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Tables</a>
-                    <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Charts</a>
+                    <a href="/admin/all-orders" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Orders</a>
+                    <a href="/admin/sales-report" class="nav-item nav-link" style="cursor: pointer;"><i class="fa fa-chart-bar me-2"></i>Sales report</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="far fa-file-alt me-2"></i>Pages</a>
                         <div class="dropdown-menu bg-transparent border-0">
