--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -70,6 +70,7 @@
   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
     {{#if user}}
     <a class="dropdown-item" href="/Logout">Logout</a>
+    <a class="dropdown-item" href="/profile">Profile</a>
     {{else}}
     <a class="dropdown-item" href="/Login">Login</a>
     <a class="dropdown-item" href="/signup">SignUp</a>
