--- a/views/user/otpLogin.hbs
+++ b/views/user/otpLogin.hbs
@@ -7,7 +7,7 @@
           <input type="text" name="phone" placeholder="PhoneNo..."><br>
         <h4 class="err" id="NoErr"> </h4>
         <br>
-        <button type="submit" onclick="toggle()">Send OTP</button>
+        <button type="submit">Send OTP</button>
     </form>
 </section>
 
