--- a/views/user/verifyOTP.hbs
+++ b/views/user/verifyOTP.hbs
@@ -1,7 +1,8 @@
-<section class="login">
+<section class="login ml-5">
     <div class="head pt-4 mt-3">
         <span>Login</span>
     </div>
+    <span style="color: red;">{{msg}}</span>
     <form class="LIF" action="/verifyOTP" id="login2" method="POST">
            <label for="OTP">OTP</label><br>
           <input type="text" name="otp" placeholder="OTP..."><br>
