--- a/views/admin/admin-products.hbs
+++ b/views/admin/admin-products.hbs
@@ -1,30 +1,49 @@
-<section >
+<section class="mr-4" >
+
   <div class="row">
-    <a href="/admin/add-products"class="btn btn-success mt-1 ml-auto">ADD PRODUCTS</a>
+    <a href="/admin/add-products"class=" betaButton mt-1 ml-auto" style="text-decoration: none ; color:black;width: 13rem;">ADD PRODUCTS</a>
   </div>
-<table class="table mt-3">
+  <a href="/admin/manage-categories"><span style="margin-left: 16rem;border: solid;padding: 10px;border-bottom: 0;position: absolute;margin-top: 0;background: #bebbbb;color:black;z-index: 1000;">manage category</span></a>
+ 
+<table class="table mt-3" id="userTable">
   <thead>
     <tr>
       
       <th scope="col">Name</th>
-      <th scope="col">catogery</th>
-      <th scope="col">Discription</th>
-      <th scope="col">prize</th>
+      <th scope="col">category</th>
+    
+      <th scope="col">Description</th>
+      <th scope="col">price</th>
       <th scope="col">Image</th>
       <th scope="col">Options</th>
     </tr>
   </thead>
   <tbody>
     {{#each products}}
+    
     <tr>
      
-      <td>{{this.productname}}</td>
-      <td>{{this.catogery}}</td>
-      <td>{{this.discription}}</td> 
-      <td>{{this.prize}}</td>
-      <td><img style="width: 50px;height: 60px;" src="/product-images/{{this._id}}.jpg" alt=""></td>
-      <td><a href="/admin/edit-product?id={{this._id}}"class="btn btn-primary">Edit</a>
-      <a href="/admin/delete-product?id={{this._id}}"class="btn btn-danger" onclick="return confirm('Are you  want to delete{{this.Name}} this product')"> Delete</a></td>
+      <td>{{this.productname}}
+      
+      </td>
+      {{#each ../categories}}
+      
+      {{#ifCond  this._id ../this.category}}
+     
+      <td>{{this.category}}</td>
+   
+      {{/ifCond}}
+      {{/each}}
+     
+      <td>{{this.description}}</td> 
+      <td>{{this.price}}</td>
+      <td><img style="width: 50px;height: 60px; " src="/product-images/{{this._id}}.jpg" alt="" ></td>
+      <td><a href="/admin/edit-product?id={{this._id}}"><img
+                src="/images/EditButton.svg"
+                alt=""
+                class="editBtn"
+              /></a>
+      <a href="/admin/delete-product?id={{this._id}}" onclick="return confirm('Are you  want to delete{{this.Name}} this product')"> <i class="fa fa-trash deleteBtn" style="padding-left: 2.4rem;"></i></a></td>
     </tr>
     {{/each}}
   </tbody>
