--- a/views/admin/orders.hbs
+++ b/views/admin/orders.hbs
@@ -1,7 +1,7 @@
 <section >
     <div class="container">
         <div class="row">
-            <table class="table table-bordered">
+            <table class="table table-bordered" id="userTable">
                 <thead>
                     <tr>
                     <th>Date</th>
@@ -15,28 +15,33 @@
                     <tr>
                         <td>{{this.deliveryDetails.Date}}</td>
                         
-                        <td><span id="span{{this._id}}">{{this.status}}</span>
-                          <div class="btn-group">
-                          <button type="button" style="width: 5px;height: 5px;" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    
-  </button>
-                      <div class="dropdown-menu">
-  <form class="form px-4 py-3" >
-    <div class="form-group">
-      <label for="exampleDropdownFormEmail1"> Set status</label>
-      <input type="status" name="status" class="form-control"id="status{{this._id}}" >
-    </div>
-    
-   
-    <button type="submit"onclick="setStatus('{{this._id}}')" class="btn btn-primary">Set</button>
-  </form>
-  </div>
+                        <td>
+                         <select name="status" id="status{{this._id}}" class="betaButton" onchange="setStatus('{{this._id}}')" >
+                          <option value="{{this.status}}">{{this.status}}</option>
+                          <option value="ordered">ordered</option>
+                          <option value="approved">approved</option>
+                          <option value="cancelled">cancelled</option>
+        <option value="shipped">shipped</option>
+         <option value="out for delivery">Out for delivery</option>
+           <option value="Delivered">Delivered</option>
+      </select>
  
                         </td>
                         <td>
                             <p>
-  <button class="btn btn-primary" data-toggle="collapse" data-target="#1{{this._id}}" type="button" onclick="userDetails('{{this.userId}}','{{this._id}}')" aria-expanded="false" aria-controls="multiCollapseExample1"> User details</button>
-  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#2{{this._id}}" aria-expanded="false" aria-controls="multiCollapseExample2">Order details</button>
+  <button class="betaButton" data-toggle="collapse" data-target="#1{{this._id}}" type="button" onclick="userDetails('{{this.userId}}','{{this._id}}')" aria-expanded="false" aria-controls="multiCollapseExample1" style="
+    width: 8rem;
+"> User details</button>
+  <button class="betaButton" type="button" data-toggle="collapse" data-target="#2{{this._id}}" aria-expanded="false" aria-controls="multiCollapseExample2" style="
+    width: 8rem;
+">Order details</button>
+<a href="/admin/remove-order?id={{this._id}}"><i class="fa fa-close" style="
+    font-size: 2rem;
+    padding-left: .5rem;
+    position: absolute;
+    color: #c90606;
+" ></i></a>
+
   
 </p>
 <div class="row">
@@ -58,7 +63,7 @@
         <h5>Payment:{{this.payment_Method}}</h5><br>
         <h5>Amount:{{this.totalAmount}}</h5><br>
         <h5>Status:{{this.status}}</h5><br>
-        <a href="/admin/ordered-products?id={{this._id}}">Poducts</a>
+        <a href="/admin/ordered-products?id={{this._id}}">Products</a>
 
       </div>
     </div>
