--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,10 +5,10 @@
         {{#each products}}
         <div class="col-md-4">
     <div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="{{this.image}}" alt="Card image cap">
+  <img class="card-img-top" src="{{this.image}}" alt="Card image cap"></a>
   <div class="card-body">
     <h5 class="card-title">{{this.name}}</h5>
-    <p class="card-text">{{this.discription}}</p>
+    <p class="card-text">{{this.description}}</p>
     <a href="#" class="btn btn-primary">add to cart</a>
   </div>
   </div>
