--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -30,19 +30,21 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-    
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+      <script src="https://www.paypal.com/sdk/js?client-id=AUyQ-4Rf0eI5M8ShNuHbcuZ9sjrQ3Pvm8_b5OlvI4d0mdDswuAZujeyiAuimazaTjVvY8Ll8zxpN5Vnv&currency=USD"></script>
+    {{!-- <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script> --}}
    
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
      <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.css">
     <title>{{title}}</title>
   </head>
   <body>
-    {{#if loginPage}}
+      {{#if loginPage}}
     {{else}}
         {{#if admin}}
          <div class="mt-4" style="
     margin-left: 16rem;
+    background: #f5f5f5;
 ">
     {{>admin-sidebar}}
     {{else}}
@@ -53,6 +55,8 @@
     {{{body}}}
     {{#if admin}}
     </div>
+    {{else}}
+    {{>user-footer}}
     {{/if}}
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -71,7 +75,7 @@
     <script src="/javascripts/script.js"></script>
    
   <script src="/javascripts/validateForm.js"></script> --}}
-<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
     integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
@@ -79,6 +83,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
+    
    <script type="text/javascript" charset="utf8"
     src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.js"></script>
     <script>
@@ -86,6 +91,10 @@
     $('#userTable').DataTable();
     });
   </script>
-    
+    <script src="/javascripts/script.js"></script>
+    <script src="/javascripts/app.js"></script>
+    <script src="/javascripts/validateForm.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.js"></script>
+  
   </body>
 </html>
