--- a/views/user/orderProducts.hbs
+++ b/views/user/orderProducts.hbs
@@ -8,8 +8,8 @@
   <img class="card-img-top" style="height:14em"src="/product-images/{{this.product._id}}.jpg" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">{{this.product.productname}}</h5>
-    <p class="card-text">{{this.product.discription}}</p>
-    <p class="card-text">{{this.product.prize}}</p>
+    <p class="card-text">{{this.product.description}}</p>
+    <p class="card-text">{{this.product.price}}</p>
     
   </div>
   </div>
