--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -2,7 +2,13 @@
 <section class="sec">
   
   
-  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div  id="logwarn">
+
+  </div>
+   
+   
+ 
+  <div id="carouselExampleControls" class="carousel slide mt-4" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img
@@ -18,36 +24,67 @@
           class="d-block" alt="...">
       </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev" style="top: 9rem;">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next" style="top: 9rem;">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
   </div>
+ <h3 style="
+    position: relative;
+    margin-top: 15rem;
+    margin-bottom: -13rem;
+    margin-left: 7rem;
+">Recent Launches</h3>
+  {{#each newProducts}}
+<div class="card h-100" style="background-color: transparent;width: 18rem;display: inline-block;margin-top: 15rem;margin-left: 6.2rem;">
+            <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light" data-mdb-ripple-color="light">
+              <img src="/product-images/{{this._id}}.jpg" class="w-100" style="    height: 18.5rem;;
+    border-radius: 30px;" />
+              <a href="/product-details/{{this._id}}">
+                {{! <div class="mask">
+                  <div class="d-flex justify-content-start align-items-end h-100">
+                    <h5><span class="badge bg-primary ms-2">New</span></h5>
+                  </div>
+                </div> }}
+                <div class="hover-overlay">
+                  <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+                </div>
+              </a>
+            </div>
+            <div class="card-body">
+              <a href="/product-details?id={{this._id}}" class="text-start text-reset">
+                <div class="d-flex justify-content-between">
+                  <h5 class="card-title">{{this.productname}} {{#each ../categories}}
+      
+      {{#ifCond  this._id ../this.category}}
+     
+      <td>{{this.category}}</td>
+   
+      {{/ifCond}}
+      {{/each}}</h5>
+             
+                </div>
+              </a>
+              {{!-- <a href="" class="text-start text-reset">
+                <p>category</p>
+              </a> --}}
+             
+              <h6 class="text-start"> ₹{{this.price}}</h6>
+         
 
-
-
-
-
-
-
-  <div class="container mt-5">
-
-    <div class="row main">
-      {{#each products}}
-
-
-      <div style="margin-top:6px;" class=" col-sm-12-md-4 ">
-        <div id="card" class="card " style="width: 14rem;">
-          <img class="card-img-top" src="/product-images/{{this._id}}.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 id="card-name" class="card-title">{{this.productname}}</h5>
-            <p id="card-text" class="card-text">{{this.discription}}</p>
-            <p class="card-text">Rs.{{this.prize}}</p>
-            <button class="btn btn-primary" onclick="addToCart('{{this._id}}')">add to cart</button>
+              {{!-- <a href="#" class="btn btn-outline-dark rounded-0 p-1">Add to Wishlist</a> --}}
+              {{!-- <a href="/add-to-cart/{{this._id}}"> --}}
+               <button class="betaButton" onclick="addToCart('{{this._id}}')" style="
+    width: 8rem;
+    background: black;
+    color: white;
+    font-weight: bold;
+    font-size: medium;
+">Add to cart</button>
             {{#if ../user}}<div class="like-btns"> <button onclick="wishList('{{../user._id}}','{{this._id}}')" class="like float-right "><img
                 id="like{{this._id}}" class="icon-like" src="/images/heart.png" alt=""><img id="liked{{this._id}}"
                 class="icon-liked" src="/images/liked.png"
@@ -56,14 +93,91 @@
                 alt=""></button>
             {{/if}}
             {{/iff}}{{/each}}</div>{{/if}}
+                </button>
+                {{!-- </a> --}}
 
+            </div>
           </div>
-        </div>
-      </div>
-      {{/each}}
-    </div>
+{{/each}}
+<div class="type m-5">
+{{#each products}}
 
-  </div>
+<h3 style="
+    margin-bottom: -13rem;
+    margin-left: 3.2rem;
+">Buy {{this.productname}}</h3>
+{{#each ../products2}}
+     
+      {{#ifCond  this.productname ../this.productname}}
+     
+    <div class="card h-100 ml-5" style="background-color: transparent;   width: 18rem; display: inline-block;  margin-top: 15rem;">
+            <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light" data-mdb-ripple-color="light">
+              <img src="/product-images/{{this._id}}.jpg" class="w-100" style="    height: 18.5rem;;
+    border-radius: 30px;" />
+              <a href="/product-details/{{this._id}}">
+                {{! <div class="mask">
+                  <div class="d-flex justify-content-start align-items-end h-100">
+                    <h5><span class="badge bg-primary ms-2">New</span></h5>
+                  </div>
+                </div> }}
+                <div class="hover-overlay">
+                  <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+                </div>
+              </a>
+            </div>
+            <div class="card-body">
+              <a href="/product-details?id={{this._id}}" class="text-start text-reset">
+                <div class="d-flex justify-content-between">
+                  <h5 class="card-title">{{this.productname}} 
+                    
+          {{#each ../../categories}}
+      
+      {{#ifCond  this._id ../../this.category}}
+     
+      <td>{{this.category}}</td>
+   
+      {{/ifCond}}
+      {{/each}}</h5>
+             
+                </div>
+              </a>
+              {{!-- <a href="" class="text-start text-reset">
+                <p>category</p>
+              </a> --}}
+             
+              <h6 class="text-start"> ₹{{this.price}}</h6>
+         
+
+              {{!-- <a href="#" class="btn btn-outline-dark rounded-0 p-1">Add to Wishlist</a> --}}
+              {{!-- <a href="/add-to-cart/{{this._id}}"> --}}
+               <button class="betaButton" onclick="addToCart('{{this._id}}')" style="
+    width: 8rem;
+    background: black;
+    color: white;
+    font-weight: bold;
+    font-size: medium;
+">Add to cart</button>
+            {{#if ../../user}}<div class="like-btns"> <button onclick="wishList('{{../../user._id}}','{{this._id}}')" class="like float-right "><img
+                id="like2{{this._id}}" class="icon-like" src="/images/heart.png" alt=""><img id="liked{{this._id}}"
+                class="icon-liked" src="/images/liked.png"
+                alt=""></button>{{#each ../../wishlist }}{{#iff this ../../this._id}}{{#if status}}
+            <button id="likebtn{{../../this.id}}" onclick="unWish('{{../../../../user._id}}','{{../../../this._id}}')" class="liked float-right liked{{../../../this._id}}"><img  class="iconliked" src="/images/liked.png"
+                alt=""></button>
+            {{/if}}
+            {{/iff}}{{/each}}</div>{{/if}}
+                </button>
+                {{!-- </a> --}}
+
+            </div>
+          </div>
+ 
+   
+      {{/ifCond}}
+{{/each}}
+{{/each}}
+</div>
+
+
 
 
  
